Fix change-budget initial load placeholders